- kleinere Verbesserungen - Fehler im Skript aufgelöst - TODOs fuer Uebungsaufgaben hinzu
git-svn-id: https://svn.lug-jena.de/uni-skripte@620 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-algebra1/mitschrift.tex
+++ b/kuelshammer-algebra1/mitschrift.tex
@@ -763,10 +763,10 @@ Für $a, b, c \in \Z$ und $m \in \N$ gilt:
   (disjunkte Vereinigung) von $d$ Restklassen modulo $m$.
 \begin{beweis}
   \begin{itemize}
-  \item[\glqq$\Rightarrow$\grqq] Sei $x \in \Z$ mit $ax \equiv b\pmod
+  \item["`$\Rightarrow$"'] Sei $x \in \Z$ mit $ax \equiv b\pmod
     m$. Dann existiert $y \in \Z$ mit $ax - b = my$. Folglich: $d\mid
     ax - my = b$.
-  \item[\glqq$\Leftarrow$\grqq] Sei $d\mid b, a_0 := \frac{a}{d}, m_0
+  \item["`$\Leftarrow$"'] Sei $d\mid b, a_0 := \frac{a}{d}, m_0
     := \frac{m}{d}, b_0 := \frac{b}{d}$. Wegen $\ggt(a_0, m_0) = 1$
     existiert $y_0, z_0 \in \Z$ mit $1 = a_0y_0 + m_0z_0$. Daher: $b =
     \underbrace{a_0b}_{= ab_0}y_0 + \underbrace{m_0b}_{= mb_0}z_0
@@ -881,17 +881,21 @@ ist $\max\{\min\{b_{1p}, b_{2p}\}, \ldots, \min\{b_{1p}, b_{np}\}\}= c$.
 \begin{satz}[Chinesischer Restsatz \footnotesize{(stand in einem chinesischen Buch über Militärführung)}\normalsize]\label{satz:2.5}
   Seien $a_1, \ldots, a_k \in \Z$ und $m_1, \ldots, m_k$. Genau dann
   ist das System von Kongruenzen:
-  \[(\ast) \ x \equiv a_i \pmod{m_i} \ \ (i = 1, \ldots, k)\]
+  \begin{gather}\label{eq:25-1}
+    x \equiv a_i \pmod{m_i} \quad (i = 1, \ldots, k)
+  \end{gather}
   Simultan lösbar, wenn gilt:
-  \[(\ast\ast) \ a_i \equiv a_j \pmod{\ggt(m_i, m_j)} \ \ (i, j = 1, \ldots, k)\]
+  \begin{gather}\label{eq:25-2}
+    a_i \equiv a_j \pmod{\ggt(m_i, m_j)} \quad (i, j = 1, \ldots, k)
+  \end{gather}
   Gegebenenfalls bilden die Lösungen eine Restklasse modulo $\kgv(m_1,
   \ldots, m_k)$.
 \begin{beweis}
   \begin{itemize}
-  \item[\glqq$\Rightarrow$\grqq] Sei ($\ast$) erfüllt. Für $i, j = 1,
+  \item["`$\Rightarrow$"'] Sei \autoref{eq:25-1} erfüllt. Für $i, j = 1,
     \ldots, k$ gilt dann: $a_i \equiv x \equiv a_j \pmod{\ggt(m_i,
       m_j)}$.
-  \item[\glqq$\Leftarrow$\grqq] Sei ($\ast\ast$) erfüllt. Wir
+  \item["`$\Leftarrow$"'] Sei \autoref{eq:25-2} erfüllt. Wir
     argumentieren mit Induktion. Im Fall $k = 1$ ist nichts zu
     tun. Denn wir können einfach $x = a_1$ wählen. Sei also $k \geq 2,
     d := \ggt(m_1, m_2), e := \kgv(m_1, m_2)$. Schreibe $d = ym_1 +
@@ -899,7 +903,7 @@ ist $\max\{\min\{b_{1p}, b_{2p}\}, \ldots, \min\{b_{1p}, b_{np}\}\}= c$.
     a_2 + (a_1 - a_2)\frac{zm_2}{d}$. Dann $b \equiv a_1
     \pmod{m_1}$. Denn $a_1 \equiv a_2 \pmod{d} \Rightarrow d\mid a_2 -
     a_1$ und $b \equiv a_2 \pmod{m_2}$. Im Fall $k = 2$ ist also
-    ($\ast$) lösbar.
+    \autoref{eq:25-1} lösbar.
 
     Sei also $k \geq 3$. Für $i = 3, \ldots, k$ ist $a_i \equiv a_1
     \equiv b \pmod{\ggt(m_i, m_1)}$ und $a_i \equiv a_2 \equiv b
@@ -908,15 +912,15 @@ ist $\max\{\min\{b_{1p}, b_{2p}\}, \ldots, \min\{b_{1p}, b_{np}\}\}= c$.
       \ref{satz:2.3}(iii)}{=} \ggt(m_i, \kgv(m_1, m_2)) = \ggt(m_i,
     e)$. Nach Induktion existiert ein $x \in \Z$ mit $x \equiv b
     \pmod{e}$ und $x \equiv a_i \pmod{m_i}$ für $i = 3, \ldots,
-    k$. Man muss hierfür ($\ast\ast$) für dieses System von
+    k$. Man muss hierfür \autoref{eq:25-2} für dieses System von
     Kongruenzen überprüfen). Für $i = 1,2$ ist $x \stackrel{x \equiv b
       \pmod{e}}{\equiv} b \equiv a_i \pmod{m_i}$.
   \end{itemize}
 Zum Nachweis der Eindeutigkeit sei $x' \in \Z$ weitere Lösung von
-($\ast$). Dann: $x' \equiv a_i \equiv x \pmod{m_i}$ für $i = 1,
+\autoref{eq:25-1}. Dann: $x' \equiv a_i \equiv x \pmod{m_i}$ für $i = 1,
 \ldots, k$, d.\,h. $x' \equiv x \pmod{\kgv(m_1, \ldots, m_k)}$. Dann
 ist $x' \equiv x \equiv a_i \pmod{m_i} \ \ (i = 1, \ldots, k)$,
-d.\,h. $x'$ ist auch Lösung von ($\ast$). 
+d.\,h. $x'$ ist auch Lösung von \autoref{eq:25-1}. 
 \end{beweis}
 \end{satz}
 
@@ -933,7 +937,7 @@ Es seien folgende Gleichungen zu lösen:
 \end{align*}
 Um die Lösbarkeit brauchen wir uns erstmal keine Gedanken machen. Dies
 wird man schon im Laufe der Rechnung feststellen. Anderenfalls
-$\Rightarrow$ ($\ast\ast$) muss man nicht zuerst überprüfen).
+$\Rightarrow$ \autoref{eq:25-2} muss man nicht zuerst überprüfen).
 
 Die allgemeine Lösung von $x \equiv 3 \pmod{14}$ ist $3 + 14\Z$. Somit
 folgt $3 + 14y \equiv 5 \pmod{12} \Leftrightarrow 2y \equiv 2
@@ -946,6 +950,7 @@ Die allgemeine Lösung von $x \equiv 3 \pmod{14}$ und $x \equiv 5
 gilt $\kgv(84, 10) = 84 \cdot 5 = 420$. Somit ist die allgemeine
 Lösung von ($\ast$): $101 + 420\Z$
 \end{bsp}
+\todo{Sind die obigen Kapitel alle korrekt?}
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
@@ -962,23 +967,23 @@ Lösung von ($\ast$): $101 + 420\Z$
     d.\,h. man muss nicht dividieren können} aus einer Menge $R$ und
   zwei Verknüpfungen $+, \cdot \colon R \times R \mapsto R$ mit
   folgenden Eigenschaften:
-\begin{enumerate}[(i)]
+\begin{compactenum}[(i)]
 \item $(R, +)$ ist abelsche Gruppe.
 \item $(ab)c = a(bc)$ mit $a, b, c \in R$
 \item $a(b + c) = ab + ac$ mit $a, b, c \in R$
 \item $(a + b)c = ac + bc$ mit $a, b, c \in R$
 \item Es existiert ein $1 \in R$ mit $1a = a = a1$ für $a \in R$.
-\end{enumerate}
+\end{compactenum}
 
 Bekanntlich ist das Element $1$ eindeutig bestimmt. Es heißt
-\addindex{Einselement}, und man schreibt $1 = 1_R$. Analog enthält $R$
-genau ein Element $0$ (\addindex{Nullelement}) mit $a + 0 = a = 0 + a$
-für $a \in R$. Ferner existiert zu jedem $a \in R$ genau ein $-a \in
-R$ (\addindex{Negatives Element}) mit $a + (-a) = 0 = (-a) + a$. Dabei
-gilt:
+\addindex{Einselement}, und man schreibt $1 = 1_R$. Analog enthält der
+Ring $R$ genau ein Element $0$ (\addindex{Nullelement}) mit $a + 0 = a
+= 0 + a$ für $a \in R$. Ferner existiert zu jedem $a \in R$ genau ein
+$-a \in R$ (\addindex{negatives Element}) mit $a + (-a) = 0 = (-a) +
+a$. Dabei gilt:
 \[0a = 0 = a0, -(-a) = a, (-a)b = -(ab)\]
 Statt $a + (-b)$ schreibt man $a - b$. Gilt $ab = ba$ für alle $a, b
-\in R$, so heißt $R$ \addindex{Kommutativer Ring}. Beispielweise sind
+\in R$, so heißt $R$ \addindex{kommutativer Ring}. Beispielweise sind
 $\Z$ und jeder Körper $K$ kommutative Ringe. Aber $\N, \N_0$ sind
 keine Ringe.  Für $n \in \N$ ist $K^{n \times n}$ mit der üblichen Addition und
 Multiplikation von Matrizen ein Ring (\addindex{Matrixring}). Für $n
@@ -1074,7 +1079,7 @@ $\ZmZ{6}$ ist kein Körper. So ist z.\,B. $\underbrace{(2 + 6\Z)}_{\neq 0 +
   \addindex{prime Restklassengruppe modulo $m$}\footnote{Die Gruppe
     ist nicht prim, sondern nur die Restklassen}. So ist z.\,B.
   $U(\ZmZ{6}) = \{1 + 6\Z, 5 + 6\Z\}$, aber bei einem Körper müssen
-  alle Elemente inverterierbar sein.
+  alle Elemente invertierbar sein.
 \item Für $a + m\Z \in U(\ZmZ{m})$ berechnet man $(a + m\Z)^{-1}$ mit
   dem erweiterten euklidischen Algorithmus. Im Fall $a + m\Z = 39 +
   100\Z$ erhalten wir:
@@ -1142,7 +1147,7 @@ Wir suchen jedoch nach einer expliziten Formel.
 %%%%%%%%%%%%%%%%%%%
 \begin{bsp}
 Folgende Beispiele zeigen die Anwendung der Möbiusfunktion:
-\[\mu(4) = \mu(2^2) = 0\qquad\mu(6) = \mu(2 \cdot 3) = (-1)^2 = 2\qquad
+\[\mu(4) = \mu(2^2) = 0\qquad\mu(6) = \mu(2 \cdot 3) = (-1)^2 = 1\qquad
 \mu(1) := 1\]
 \end{bsp}
 
@@ -1172,7 +1177,7 @@ p_1^{a_1} \cdots p_r^{a_r}$. Dann ist
     p_r^{i_r})}_{\mu(p_1^{i_1}) \cdot \ldots \cdot \mu(p_r^{i_r})}\\
   & = \prod_{j = 0}^{r}\left[\underbrace{\mu(p_j^0)}_{= 1} +
     \underbrace{\mu(p_j^1)}_{= -1} + \underbrace{\mu(p_j^2)}_{= 0} +
-    \ldots + \underbrace{\mu()p_j^{a_i}}_{= 0}\right] = 0
+    \ldots + \underbrace{\mu(p_j^{a_i})}_{= 0}\right] = 0
 \end{align*}
 \end{beweis}
 \end{satz}
@@ -1290,8 +1295,8 @@ Setze $\F_p := \ZmZ{p}$ für $p \in \PZ$
 \begin{beweis}
   In $\prod_{0 \neq x \in K}x$ kürze man jeweils $x$ gegen $x^{-1}$.
   Dies geht, falls $x \neq x^{-1}$ ist.
-  \[x = x^{-1} \Leftrightarrow x^2 = 1 \Leftrightarrow \underbrace{x^2
-    - 1}_{(x + 1)(x - 1)} = 0 \Leftrightarrow x = \pm 1\]
+  \[x = x^{-1} \Leftrightarrow x^2 = 1 \Leftrightarrow x^2 - 1 = (x +
+  1)(x - 1)  = 0 \Leftrightarrow x = \pm 1\]
   Also $\prod_{0 \neq x \in K}x = 1 \cdot (-1) = -1$. Für $K :=
   \ZmZ{p}$ erhält man: 
   \[\underbrace{\prod_{i = 1}^{p - 1}(i + p\Z)}_{= -1 + p\Z} =
@@ -1305,7 +1310,7 @@ Setze $\F_p := \ZmZ{p}$ für $p \in \PZ$
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[\textsc{Euler-Fermat}]\label{satz:3.8}
   Für jede endliche abelsche Gruppe $G$ und jedes $g \in G$ gilt:
-  \[g^{\abs{G}}.\] Insbesondere ist $a^{\varphi(m)} \equiv 1 \pmod{m}$
+  \[g^{\abs{G}}=1\] Insbesondere ist $a^{\varphi(m)} \equiv 1 \pmod{m}$
   für alle $m \in \N$, $a \in \Z$ mit $\ggt(a, m) = 1$.
 \begin{beweis}
   Sei $G = \{x_1, \ldots, x_n\}, n = \abs{G} $. Für $i, j = 1, \ldots,
@@ -1314,8 +1319,8 @@ Setze $\F_p := \ZmZ{p}$ für $p \in \PZ$
   \Leftrightarrow x_i = x_j\]
   Daher ist auch $G = \{gx_1, \ldots, gx_n\}$. Also gilt:
   \[x := \prod_{i = 1}^{n}x_i = \prod_{i = 1}^{n}\left(gx_i\right) =
-  g^n\prod_{i = 1}^{n} = g^nx,\]
-  d.\,h. $g^n = 1$.
+  g^n\prod_{i = 1}^{n} x_{i} = g^nx,\]
+  d.\,h. $g^n = 1=g^{\abs{G}}$.
 
   Für $G = U\left(\ZmZ{m}\right)$, d.\,h. $\abs{G} = \varphi(m)$ und
   $g := a + m\Z \in G$ gilt also: \[1 + m\Z = g^{\abs{G}} = \left(a +
@@ -1334,7 +1339,7 @@ Setze $\F_p := \ZmZ{p}$ für $p \in \PZ$
   \item $a^{p-1} \equiv 1 \pmod{p}$ für alle $a \in \Z$ mit $p\nmid a$
   \item $a^p \equiv a \pmod{p}$ für alle $a \in \Z$
   \end{itemize}
-\item Wir werden den Satz später auf nicht abelsche, endliche Gruppen
+\item Wir werden den Satz später auf nichtabelsche, endliche Gruppen
   verallgemeinern.
 \end{enumerate}
 \end{bem}
@@ -1458,12 +1463,12 @@ Sei $K$ ein Körper.
   $\varphi$. Dann ist $\varphi = \sum_{i = 0}^da_iX^i$. Das
   Nullpolynom erhält den Grad $-\infty$. Für $\varphi, \psi \in
   K[X]$ und $0 \neq r \in K$ gilt dann:
-  \begin{enumerate}[(i)]
+  \begin{compactenum}[(i)]
   \item $\deg{(r\varphi)} = \deg{(\varphi)}$
   \item $\deg{(\varphi + \psi)} \leq \max{\{\deg\varphi, \deg\psi\}}$
   \item $\deg{(\varphi)} \neq \deg{(\psi)} \Rightarrow \deg{(\varphi + \psi)} = \max{\{\deg{(\varphi)}, \deg{(\psi)}\}}$
   \item $\deg{(\varphi\psi)} = \deg\varphi + \deg\psi$
-  \end{enumerate}
+  \end{compactenum}
   Für $r, s \in K$ ist $rX^0 \pm sX^0 = (r + s)X^0$. Daher
   können wir jeweils $r \in K$ mit $rX^0 \in K[X]$
   identifizieren und so $K$ als Teilmenge von $K[X]$
@@ -1480,7 +1485,7 @@ Sei $K$ ein Körper.
 %%%%%%%%%%%%%%%%%%%
 \begin{satz}[Division mit Rest]\label{satz:5.1}
   Seien $\varphi, \psi \in K[X]$ mit $\psi \neq 0$. Dann
-  existiert eindeutig bestimmtes $\kappa, \rho \in K[X]$
+  existieren eindeutig bestimmte $\kappa, \rho \in K[X]$
   mit $\varphi = \kappa\psi + \rho$ und $\deg\rho < \deg\varphi$.
 \end{satz}
 
@@ -1510,7 +1515,7 @@ Sei $K$ ein Körper.
   \addindex{Teiler} von $\psi$ und schreibt $\varphi\mid \psi$, falls
   $\psi \equiv \varphi\omega$ für ein $\omega \in K[X]$ ist. Dabei
   gilt wie in $\Z$:
-\begin{enumerate}[(i)]
+\begin{compactenum}[(i)]
 \item $\varphi\mid 0$, $1\mid \varphi$, $\varphi\mid \varphi$
 \item $\varphi\mid \psi \wedge \psi\mid \omega \Rightarrow \varphi\mid \omega$
 \item $\varphi\mid \psi \Rightarrow c\varphi\mid d\psi \qquad (c, d \in
@@ -1520,7 +1525,7 @@ Sei $K$ ein Körper.
 \item $0\mid \varphi \Rightarrow \varphi = 0$
 \item $\varphi\mid \psi \wedge \varphi\mid \omega \Rightarrow
   \varphi\mid \alpha\psi + \beta\omega \qquad (\alpha, \beta \in K[X])$
-\end{enumerate}
+\end{compactenum}
 
 Seien $\varphi_1, \ldots, \varphi_n \in K[X]$. Ein $\tau \in K[X]$ mit
 $\tau\mid \varphi_1, \ldots, \tau\mid \varphi_n$ heißt
@@ -1690,7 +1695,8 @@ Ist $\varphi(b) = 0$, so heißt $b$ \addindex{Nullstelle} von $\varphi$.
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}
-Dann gelten die folgende Rechenregeln (Übungs-Aufgabe):
+Dann gelten die folgende Rechenregeln (Übungs-Aufgabe): \todo{Übung
+  ergänzen}
 \begin{enumerate}[(i)]
 \item $(\varphi + \psi)' = \varphi' + \psi'$
 \item $(\varphi\psi)' = \varphi'\psi + \varphi\psi'$
@@ -1818,7 +1824,9 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
   0$. Wäre $\varphi$ reduzibel, so wäre $\varphi = \alpha\beta$ mit
   $\alpha, \beta \in K[X], \deg\alpha < \deg\varphi, \deg\beta <
   \deg\varphi$. Dann wäre $\alpha + (\varphi) \neq 0 \neq \beta +
-  (\varphi)$. Aber $[\alpha + (\varphi)][\beta + (\varphi)] = \alpha\beta + (\varphi) = \varphi + (\varphi) = 0 + (\varphi) \Rightarrow$ Widerspruch!
+  (\varphi)$. Aber $[\alpha + (\varphi)][\beta + (\varphi)] =
+  \alpha\beta + (\varphi) = \varphi + (\varphi) = 0 + (\varphi)
+  \Rightarrow$ Widerspruch!
 \item[\glqq$\Leftarrow$\grqq] Sei $\varphi$ irreduzibel. Dann
   $\deg\varphi > 0$ und $K[X] / (\varphi) \neq \{0\}$. Sei $0 \neq
   \alpha \in K[X]$ mit $\deg\alpha < \deg\varphi$. Dann:
@@ -1841,7 +1849,7 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
   a)(X^2 + bX + c)$ mit $a, b, c \in \F_2$. Also $\varphi(a) =
   0$. Aber: $\varphi(0) = 1 = \varphi(1)$. Daher ist $\F_2[X] / (X^3 +
   X + 1)$ Körper mit $2^3 = 8$ Elementen. (ÜA: Addition- und
-  Multiplikationstabelle aufstellen!)
+  Multiplikationstabelle aufstellen!)\todo{Übung hinfügen}
 \end{bsp}
 
 %%%%%%%%%%%%%%%%%%%
@@ -2071,7 +2079,7 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
 % Bemerkung
 %%%%%%%%%%%%%%%%%%%
 \begin{bem}\label{bem:6.8}
-  Es gibt also keine Körper mit $6$ oder $10$ Elementen. Die Anzahl
+  Es gibt also keine Körper mit 6 oder 10 Elementen. Die Anzahl
   der Elemente kann nur $p^n$ mit $(p \in \PZ)$ sein.
 \end{bem}
 
@@ -2083,7 +2091,8 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
     \in \N \colon a^n = 1\}}$ die \addindex{Ordnung} von
   $a$. Existiert das Minimum nicht, so sagt man, dass $a$ unendliche
   Ordnung hat, und schreibt: $\ord(a) = \infty$. Ist $G$ endlich, so
-  hat jedes Element in $G$ endliche Ordnung (ÜA 10).
+  hat jedes Element in $G$ endliche Ordnung (ÜA 10). \todo{Übung
+  ergänzen}
 
   Im Folgenden sei $\ord(a) = n < \infty$. Nach der ÜA~10 enthält dann
   \[\{a^m \colon m \in \Z\} = \{1, a, a^2, \ldots, a^{n-1}\}\]
@@ -2101,7 +2110,7 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
   $\abs{ G} = n < \infty$. Dann existiert ein $a \in G$ mit $a^n = 1$
   und $G = \{a^m \colon m \in \Z\} = \{1, a, \ldots, a^{n-1}\}$
 \begin{beweis}
-ÜA 12
+ÜA 12\todo{Übung ergänzen}
 \end{beweis}
 \end{satz}
 
