• haberland-zahlen/skript.latex   · Die Punkte in den Matrizen, die in der letzten Vorlesung fehlten ergänzt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@625 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -63,6 +63,7 @@
 \usepackage{fixltx2e}
 \usepackage[final]{microtype} % Verbesserung der Typographie
 \usepackage{wasysym}
+\usepackage{yhmath}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -169,6 +170,8 @@
 \renewcommand*{\epsilon}{\varepsilon}
 % ... und mancheinem gefällt auch das Phi nicht
 \renewcommand*{\phi}{\varphi}
+
+\newcommand*{\xdots}{\adots\hspace{-4.9mm}\ddots}
 
 % Nach Vorschlag von Norbert Stuhrmann in
 % <news:e6kc7d$pr8$1@f1node01.rhrz.uni-bonn.de>
@@ -5176,8 +5179,8 @@ Zur Erinnerung: ($p_{j}> 2$ verschieden)
       M^{2} =
          \begin{pmatrix}
            p& 0& \dotso & 0\\
-           0& & & & p\\
-           \vdots& & \Ddots\\
+           0& & & p\\
+           \vdots& & \adots\\
            0& p
          \end{pmatrix}
     \end{gather*}
