--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -5244,6 +5244,176 @@ Zur Erinnerung: ($p_{j}> 2$ verschieden)
   \end{enumerate}
 \end{bsp}
 
+% 11.1.
+
+\todo{hier fehlt der Anfang}
+
+$2007 = 9\cdot223$, $223 \equiv 3\pmod{4}$, $K=\Q(\sqrt{-2007}) = \Q(\sqrt{-223})$
+
+\section{2007 -- Interessante Ergebnisse zur Jahreszahl}
+
+$\sqrt{223} = [14; \overline{1,13,1,28}]$
+\begin{gather*}
+  \begin{array}{l|*{6}{c}}
+    n& 0& 1& 2& 3& 4 & 5\\
+    \hline
+    a_{n}& & 14& 1& 13& 1& 28\\
+    p_{n}& 1& 14& 15& 209& 224 \\
+    q_{n}& 0& 1& 1& 14& 15\\
+    p_{n}^{2}-223q_{n}^{2}& &-27& 2& 73& 1
+  \end{array}
+\end{gather*}
+
+$\epsilon_{K} = 224+15\sqrt{223}$
+
+$Cl_{K}\colon \N\ideal \leq \frac{1}{2}\sqrt{4\cdot223} = \sqrt{223} <15$.
+
+2 verzweigt:
+\begin{align*}
+  (\frac{223}{3}) = (\frac{1}{3}) = 1& & \text{3 zerlegt}\\
+  (\frac{223}{5}) = (\frac{3}{5}) = -1& & \text{5 träge}\\
+  (\frac{223}{7}) = (\frac{13}{7}) = (\frac{-1}{7}) = -1 & & \text{7 träge}\\
+  (\frac{223}{11}) = (\frac{3}{11}) = (-1)^{15} (\frac{11}{3}) =
+     -(\frac{2}{3}) = 1& & \text{11 zerlegt}\\
+  (\frac{223}{13}) = (\frac{-37}{13}) = (\frac{2}{3}) = -1 & & \text{13 träge}
+\end{align*}
+
+$Cl_{K}$ erzeugt durch $\ideal_{2},\ideal_{3},\ideal_{11}$.
+
+$N(a+b\omega) = a^{2}-223b^{2}$
+\begin{gather*}
+  b=1
+     \begin{array}{ccc}
+       a& a^{2}-223\\
+       \hline
+       15& 2& \Rightarrow \ideal_{2} = (12+\omega) \sim 1\\
+       16& 33& \Rightarrow \ideal_{3}\ideal_{11} \sim 1\\
+       14& -27& \Rightarrow \ideal_{3}^{3} \sim 1\\
+       17& 66& \Rightarrow \ideal_{2}\cdot \ideal_{3}\cdot\ideal_{11} \sim 1\\
+       13& -54 = -2\cdot3^{3} &\Rightarrow \ideal_{3}^{3}\sim 1
+     \end{array}
+\end{gather*}
+$Cl_{K}$ erzeugt von $\ideal_{3}$, $h_{K} = 1,3$
+
+Ist $\ideal_{3}$ ein Hauptideal?
+\begin{gather*}
+  \ideal_{3} = (\alpha), \abs{N\alpha} = 3, \alpha = a+b\sqrt{223}, a,b\in\Z\\
+  a^{2} - 223b^{2} = \pm 3 \Rightarrow =-3\\
+  a^{2} - 223b^{2} = 3 \Rightarrow (\frac{3}{223}) = 1, (\frac{3}{223}) =
+     -(\frac{223}{3}) = -(\frac{1}{3}) = -1
+\end{gather*}
+
+$N(\alpha) = -3 \Rightarrow N(\epsilon_{K}^{m}\alpha) = -3$ Also existieren
+Lösungen, so auch solche mit $1<\alpha<\epsilon_{K}<450$. $\alpha\alpha' = -3
+\Rightarrow \alpha' = -\frac{3}{\alpha}$
+
+\begin{gather*}
+  1<a+b\sqrt{223} < 450\\
+  \Rightarrow \frac{1}{450} < \frac{1}{\alpha} < 1\\
+  \Rightarrow -3 < -\frac{3}{\alpha} < -\frac{3}{450}\\
+  -3 < a-b\sqrt{223} < -\frac{3}{450}\\
+  \Rightarrow -2 < 2a < 450 -\frac{3}{450} \Rightarrow a>0  \Rightarrow b>0
+\end{gather*}
+Also $0<b < \frac{450}{\sqrt{223}} < 30,2$. Also: Man mustere die 30~Zahlen
+$223b^{2}-3$ $b=1,2,\dotsc,30$ durch, ob ein Quadrat vorkommt. -- Es kommt
+kein Quadrat vor $\Rightarrow$ $Cl_{K}$ ist zyklisch der Ordnung~3.
+
+\subsection{Alle Darstellung von 223 als Summe von vier Quadraten}.
+
+Die Formel von Jaccobi besagt, dass für ungerades $n$ die Anzahl der Quadrupel
+\begin{gather*}
+  r_{4}(n) = 8\sum_{d\mid n} d
+\end{gather*}
+
+$r_{4}(223) = 8\cdot 224 = 2^{8}\cdot7$, $r_{4}(223) = \card
+\{m\in\Z^{4}\colon \norm{m}^{2} = 223\}$
+
+Wir wollen keinen Brute-force-Angriff machen. Ansatz für systematisches Suche:
+\begin{gather*}
+  223 = a^{2} + b^{2} + c^{2} + d^{2}\\
+  223 = 7\pmod{8} \Rightarrow \text{keine Darstellung durch 3}\\
+  x^{2} \equiv 0,1,4\pmod{8}\\
+  \Rightarrow x^{2} + y^{2} + z^{2} \equiv 7\pmod{8}
+\end{gather*}
+
+Wir nennen eine Lösung $(a,b,c,d)$ generisch \gdwdef $0<a<b<c<d$. Sonst
+ausgeartet.
+\begin{enumerate}
+ \item $223 = a^{2} + b^{2} + 2c^{2}$
+ \item $223 = a^{2} + 3b^{2}$
+\end{enumerate}
+
+Generische Lösung liefert $16\cdot24 = 2^{7}\cdot3$ Vektoren:
+\begin{enumerate}
+ \item liefert $16\cdot12 = 2^{6}\cdot3$ Vektoren
+ \item liefert $16\cdot4 = 2^{6}$ Vektoren
+\end{enumerate}
+
+Mit $r$ bezeichnen wir die Anzahl der generischen Lösungen. Mit $s$ unt $t$
+bezeichnen wir die Anzahl der Lösungen, die nach Typ~(1) bzw. (2) (Auszählung
+oben) ausgeartet sind.
+
+$2^{8}\cdot 7 = 2^{7}\cdot 3r + 2^{6}\cdot3 s + 2^{6}t$\\
+$28 = 2^{2}\cdot7 = 6r + 3s +t$
+
+\begin{gather*}
+  \begin{array}{cc}
+    b& 223-3b^{2}\\
+    \hline
+    1& 220\\
+    2& 209\\
+    3& 196 = 14^{2}\\
+    4& 175\\
+    5& 148\\
+    6& 115\\
+    7& 76\\
+    8& 31
+  \end{array}
+\end{gather*}
+einzige Lösung $t=1$ $\Rightarrow$ $(14,3,3,3)$.
+
+\begin{gather*}
+  \begin{array}{cc}
+    1& 221 = 13\cdot17 = 10^{2}+11^{2} = 5^{2}+14^{2}\\
+    2& 215 = 5\cdot43\\
+    3& 205 = 5\cdot41 = 13^{2}+6^{2} = 14^{2}+3^{2}\\
+    5& 173 \equiv 1\pmod{4} \Rightarrow 13^{2} + 2^{2}\\
+    7& 125 = 5^{3} = 10^{2} + 5^{2} = 11^{2} + 2^{2}\\
+    9& 61 \equiv 1\pmod{4} \Rightarrow 6^{2} + 5^{2}
+  \end{array}
+\end{gather*}
+gefunden 6~Lösungen dieses Typs: $(11,10,1,1), (14,5,1,1), (13,6,3,3),
+(14,3,3,3), (13,5,5,2), (10,7,7,5), (11,7,7,2), (9,9,6,5)$
+
+$28 = 6r + 21 +1$ $\Rightarrow$ $r=1$
+
+Raten: erster Versuch $223-14^{2} = 27$ lässt sich nicht als Summe von
+3~Quadraten darstellen. Nächster Versuch: $223-13^{2} = 54 = 49 + 4 +1$
+
+Also einzige generische Lösung: $223 = 13^{2} + 7^{2} +2^{2}+1^{2}$
+
+\subsection{Alle Gruppen der Ordnung 2007}
+
+abelsche: $c_{3}\times c_{3}\times c_{223}, c_{1}\times c_{223}$.
+
+SYLOW: $N_{P} = \card \text{$P$-SYLOW-Gruppen}, N_{P}\equiv 1\pmod{p},
+N_{P}\mid (G:1)$
+
+$N_{3} \equiv 1\pmod{3}, N_{3}\mid 2007\colon 1,3,9,223,3\cdot223, 2007$\\
+$N_{3} = 1$ oder $N_{3} = 223$\\
+$N_{223} \equiv 1\pmod{223} \Rightarrow N_{223} = 1 \Rightarrow G_{223}$ ist
+nicht trivial.
+
+$G_{223}$ und $G_{3}$ sind "`disjunkt"': $G_{223}\cap G_{3} = \{1\}$.
+
+$\Rightarrow$ $G$ ist semidirektes Produkt.
+
+$G_{3}$ operiert dich Konjunktion auf $C_{223}$. $G_{3} \rightarrow
+Aut(C_{223}) = (\nicefrac{\Z}{223\Z})^{*}$ ist eine zyklische Gruppe der
+Ordnung 222, $222=2\cdot3\cdot37$. ($Aut$ ist Automorphismus)
+
+$\Rightarrow$ insgesamt noch zwei Isotypen nicht abelscher Gruppen.
+
 \clearpage
 \pdfbookmark[0]{Index}{index}
 \printindex
