• skript.latex   · amsmath bei ntheorem eingefügt.
  · Die neuen Fälle von \not= durch \ne korrigiert.

  · Die Erkennung von Spatium zwischen Abkürzungen schlägt fälschlicher Weise
    bei Abkürzungen nach einem Satzpunkt Alarm. Aber solche Stellen sind
    denoch falsch, da man Sätze nicht mit Abkürzungen beginnen soll. Daher
    habe ich statt dem Satzpunkt einfach ein Semikolon gesetzt, da dies noch
    nicht den Satz beendet, aber denoch den inhaltlichen Abstand zum z. B.
    schafft.


git-svn-id: https://svn.lug-jena.de/uni-skripte@631 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -38,7 +38,7 @@
 
 \usepackage[intlimits,leqno]{amsmath}
 \usepackage{amssymb}     % wird für \R, \C,... gebraucht
-\usepackage[thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
+\usepackage[thmmarks,hyperref,amsmath]{ntheorem} % für die Theorem-Umgebungen
                                          % (satz, defini, bemerk)
 \usepackage{xspace}      % wird weiter unten gebraucht
 \usepackage{slashbox}    % für schräge Striche im links oben in der
@@ -561,7 +561,7 @@ Eine kurze Wiederholung aus Abschnitt\,7.2
  \item $(\Gamma, \phi)$ bezeichnet eine \emph{glatte Jordankurve}
   \gdwdef $\phi\colon [a,b] \rightarrow \R^{n}$ stetig differenzierbar,
   $\Gamma=\{\phi(t)\colon t\in[a,b]\}$, $\phi$ ist injektiv auf $(a,b)$,
-  der \emph{Tangentenvektor} $\dot{\phi}(t) \not=0$ für $t\in(a,b)$
+  der \emph{Tangentenvektor} $\dot{\phi}(t) \ne0$ für $t\in(a,b)$
   \help{warum?}
 
   $(\Gamma, \phi)$ heißt \emph{geschlossen} \gdwdef $\phi(a) = \phi(b)$
@@ -814,7 +814,7 @@ Die Umkehrung von \autoref{lem:8.1.2/11} gilt im allgemeinen \textit{nicht}.
   \begin{gather*}
     \int_{\Gamma}\vec{v}\vec{dx} = \int_{0}^{2\pi}
        \begin{bmatrix}-\sin t\\\cos t\end{bmatrix}
-       \begin{bmatrix}-\sin t\\\cos t\end{bmatrix}\,dt = 2\pi \not= 0
+       \begin{bmatrix}-\sin t\\\cos t\end{bmatrix}\,dt = 2\pi \ne 0
   \end{gather*}
 \end{bsp}
 
@@ -1160,7 +1160,7 @@ Sei $B\subset\Omega\subset\R^2, \Omega$ offen, $B$ kompakt, $\vec{v}\colon
             \frac{\partial g_{3}}{\partial v}
         \end{bmatrix} = 2
       \end{gather*}
-      (oder anders: $g_{u}\times g_{v}\not=0$ auf $B\setminus N$)
+      (oder anders: $g_{u}\times g_{v}\ne0$ auf $B\setminus N$)
     \end{enumerate}
    \item $(S, g)$ kompakte Fläche
     \begin{gather*}
@@ -3850,7 +3850,7 @@ Umgekehrung gilt nicht! $\exists f\in C_{perio}([-l,l])$ mit
 $(S_{n}f(x_{0})_{n}$ divergent.
 
 Mithilfe weiterer Bedingungen an die Funktion $f$ kann man sichern, dass
-die Fourierreihe punktweise konvergiert. z.\,B.: $x_{0}\in[-l,l]$
+die Fourierreihe punktweise konvergiert; z.\,B.: $x_{0}\in[-l,l]$
 
 \begin{gather*}
   \exists f_{+}'(x_{0}) = \lim_{h\downarrow 0} \frac{f(x_{0}+h) -
@@ -4910,7 +4910,7 @@ $\int_{\Gamma} f(z)\,dz =0$.
     Wir müssen die verschiedene Fälle bzgl. der Lage von $a$ betrachten:
     \begin{faelle}
      \item Wenn $a$ außerhalb des Dreiecks $\Delta$ liegt
-      ($a\not\in\Delta$), kann man eine offene Umgebung um das Dreieck
+      ($a\notin\Delta$), kann man eine offene Umgebung um das Dreieck
       $\Delta$ finden, die nicht $a$ enthält und wir können
       \autoref{lem:1023-1} anwenden. Also $\int_{\partial\Delta} h\,dz =0$
 
