--- a/vorlage/skript.latex
+++ b/vorlage/skript.latex
@@ -22,7 +22,7 @@
 \usepackage{makeidx}
 % \usepackage[final]{graphicx}  % Für Grafiken
 \usepackage{color}
-\usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue]{hyperref}
+\usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
 \usepackage[latin1]{inputenc}
 \usepackage{ngerman}
