• vogel-krypt/skript.latex   · Christine List hat mir einige Fehler zugesandt. Ich habe sie gleich mit in     die Liste der Mitwirkenden eingetragen.
  · Das Datum für mein Schaffen auf das Jahr 2007 ausgedehnt.


git-svn-id: https://svn.lug-jena.de/uni-skripte@635 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -266,10 +266,11 @@
   haben, vielmals danken:
   \begin{itemize}
    \item \href{mailto:joerg@alea.gnuu.de}{Jörg Sommer
-    \texttt{<joerg@alea.gnuu.de>}} (2006)
+    \texttt{<joerg@alea.gnuu.de>}} (2006/07)
    \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel
     \texttt{<jens@kubieziel.de>}} (2006)
    \item Michael Preis (2006)
+   \item Christine List (2007)
   \end{itemize}
 \end{itshape}
 
@@ -1510,7 +1511,7 @@ einer Menge mit $n$~Elementen.
 
 Für eine Permutation~$\sigma\in S_{n}$ bezeichnet man ein Paar
 $(i,j)\in\{1,\dotsc,n\}^{2}$ als Fehlstand,
-wenn $i<j$ und $\sigma(i)<\sigma(j)$ gilt.
+wenn $i<j$ und $\sigma(i)>\sigma(j)$ gilt.
 
 Die \highl{Determinante} einer quadratischen Matrix~$A\in R^{n\times n}$
 ($A=(a_{ij})_{n\times n}$ mit $a_{ij}\in R$) kann man auf zwei Weisen berechnen.
@@ -2476,7 +2477,7 @@ R_{0}')$ mit folgenden Eigenschaften:
        f_{K_{1}}(R_{0}))\\
     & = (011\,010) \oplus (011\,010) = (000\,000)
   \end{align*}
-  Da $R_{1} = R_{0}$ und $L_{1}' = R_{0}'$ gilt mit Wahrscheinlichkeit
+  Da $L_{1} = R_{0}$ und $L_{1}' = R_{0}'$ gilt mit Wahrscheinlichkeit
   $\frac{3}{8}$, dass $(L_{1}, R_{1})$ und $(L_{1}', R_{1}')$ die Eigenschaft
   $R_{1}=R_{1}'$ haben und $(L_{1}\oplus R_{1})\oplus (L_{1}', R_{1}') =
   (R_{0}\oplus R_{0}', 0\dotso 0) = (001\,100, 000000)$.
@@ -2727,7 +2728,7 @@ Blowfish (1994), Twofish (1998) von Bruce Schneier
 
 \begin{description}
  \item[Blowfish] variable Schlüssellänge (bis 448~Bit), $S$-Boxen
-  schlüsselunabhängig, 16~Runden, Blöcklänge~64. Trotz aufwendiger $S$-Boxen
+  schlüsselabhängig, 16~Runden, Blöcklänge~64. Trotz aufwendiger $S$-Boxen
   ein schnell zu implementierender Algorithmus (\texttt{xor} und Addition von
   32-Bitwerten)
 
