• haberland-zahlen/skript.latex   · Der Nachtrag zur letzten Vorlesung.
  · Die Vorlesung von heute.


git-svn-id: https://svn.lug-jena.de/uni-skripte@636 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-zahlen/skript.latex
+++ b/haberland-zahlen/skript.latex
@@ -4793,7 +4793,7 @@ Wir zeigen: $Cl_{K}$ ist endlich.
 
 \begin{defini}
   Sei $m\geq 1$ und $\chi$ der Direchlet-Charakter $mod^{*} m$, $\zeta$
-  fixierte primitive $n$.\,Einheitswurzel. z.\,B.
+  fixierte primitive $n$.\,Einheitswurzel; z.\,B.
   \begin{gather*}
     \zeta = e^{\frac{2\pi i}{m}} \in\C
   \end{gather*}
@@ -5216,7 +5216,75 @@ Zur Erinnerung: ($p_{j}> 2$ verschieden)
     \end{gather*}
     Es gilt $a+b = \frac{p+1}{2}$ und $c+d = \frac{p-1}{2}$
     \begin{gather*}
-      G = (a-b+(c-d)i) \sqrt{p} (G=\sum \lambda_{i})
+      G = (a-b+(c-d)i) \sqrt{p}\qquad (G=\sum \lambda_{i})
+    \end{gather*}
+    (Da $\Tr M$ auch die Summe der Eigenwerte ist.)
+
+% 16.11.
+
+    Es folgt
+    \begin{align*}
+      a-b &= \pm 1, c =d & \text{für~} p\equiv 1\pmod{4}\\
+      a-b = 0, c-d = \pm1& \text{für~} p\equiv 3\pmod{4}
+    \end{align*}
+
+    \begin{gather*}
+      (\det M)^{2} = \det \begin{pmatrix}
+                            p& 0& \dotso & 0\\
+                            0& 0& \dotso & p\\
+                            \vdots&  & & p\\
+                            0& p& & 0
+                            \end{pmatrix}
+         = (-1)^{\frac{p(p-1)}{2}} p^{p}\\
+      \det M = \pm i^{\frac{p(p-1)}{2}} p^{\frac{p}{2}}
+    \end{gather*}
+
+    $M$ ist eine Vandermondsche Matrix, also kann man die Determinante auch
+    mit der Formel
+    \begin{align*}
+      \det M &= \prod_{0\leq s<r\leq p-1} \zeta_{p}^{r} - \zeta_{p}^{s}\\
+      \intertext{$\eta= e^{\frac{\pi i}{p}} =\zeta_{2p} = \cos\frac{\pi}{p} +
+        i\sin\frac{\pi}{p}$}
+      & = \prod_{0\leq s<r\leq p-1} \eta^{r+s} (\eta^{r-s} - \eta^{s-r})\\
+      & = \prod_{0\leq s<r\leq p-1} \eta^{r+s} (2i\sin \frac{(r-s)\pi}{p})\\
+      &= \prod_{0\leq s<r\leq p-1} \eta^{r+s} \prod_{0\leq s<r\leq p-1} 2i\sin
+         \frac{(r-s)\pi}{p}\\
+      \sum_{0\leq s<r\leq p-1} r+s &= \sum_{r=1}^{p-1}\sum_{s=0}^{r-1} r+s =
+         \sum_{r=1}^{p-1} r^{2} + \frac{r(r-1)}{2}\\
+      &= \frac{3}{2} \frac{1}{6} p(p-1)(2p-1) - \frac{1}{2} \frac{p(p-1)}{2}\\
+      &= 2p \bigl(\frac{p-1}{2}\bigr)^{2} \equiv 0\pmod{2p}\\
+      \Rightarrow &\prod_{0\leq s<r\leq p-1} \eta^{r+s} = 1\\
+      \det M &= \prod_{0\leq s<r\leq p-1} 2i\sin \frac{\pi(r-s)}{p}\\
+      &= 2^{\frac{p(p-1)}{2}} i^{\frac{p(p-1)}{2}}
+         \underbrace{\prod_{0\leq s<r\leq p-1} \sin \frac{\pi(r-s)}{p}}_{>0}\\
+      \Rightarrow \det M &= + i^{\frac{p(p-1)}{2}} p^{\frac{p}{2}}\\
+      \det M &= \prod \lambda_{i} = (-1)^{b} i^{c} (-i)^{d} p^{\frac{p}{2}}\\
+      &= i^{2b+c-d} p^{\frac{p}{2}}\\
+      \Rightarrow 2b+c-d &\equiv \frac{p(p-1)}{2}\pmod{4}
+    \end{align*}
+
+    Sei $p\equiv1\pmod{4}$ $\Rightarrow$
+    \begin{gather*}
+      a-b\equiv \frac{p+1}{2} -2b \equiv \frac{p+1}{2} - p\frac{p-1}{2}
+         \equiv 1\pmod{4}
+    \end{gather*}
+    $\Rightarrow$ $a-b = +1$.
+
+    Sei $p\equiv3\pmod{4}$ $\Rightarrow$
+    \begin{gather*}
+      c-d \equiv \frac{p(p-1)}{2} - 2b \equiv -\frac{p-1}{2} - 2b \equiv
+         -\frac{p-1}{2} - a-b \equiv -\frac{p-1}{2} - \frac{p+1}{2} \equiv -p
+         \equiv 1\pmod{4}
+    \end{gather*}
+    $\Rightarrow$ $c-d = +1$.
+
+    Zurück und einsetzen in die Formel $G=(a-b+(c-d)i)\sqrt{p}$
+    \begin{gather*}
+      G =
+         \begin{cases}
+           \sqrt{p}& p\equiv1\pmod{4}\\
+           i\sqrt{p}& p\sqrt{3}\pmod{4}
+         \end{cases}
     \end{gather*}
   \end{proof}
 \end{satz}
@@ -5246,13 +5314,64 @@ Zur Erinnerung: ($p_{j}> 2$ verschieden)
 
 % 11.1.
 
+\section{2007 -- Interessante Ergebnisse zur Jahreszahl}
+
 \todo{hier fehlt der Anfang}
 
 $2007 = 9\cdot223$, $223 \equiv 3\pmod{4}$, $K=\Q(\sqrt{-2007}) = \Q(\sqrt{-223})$
 
-\section{2007 -- Interessante Ergebnisse zur Jahreszahl}
+Ganzheitsbasis: $1, \frac{1+\sqrt{-223}}{2} = \omega$
 
+\begin{align*}
+  N(a+b\omega) &= \bigl(a+\frac{b}{2}\bigr)^{2} + \frac{b^{2}}{4}\cdot 223\\
+  & = a^{2} + ab + 56b^{2} & d_{k}=-223\\
+  \N\ideal \leq \frac{2}{\pi} \sqrt{223} \leq 20
+\end{align*}
+
+2 ist zerlegt, $d_{K} \equiv1\pmod{8}$
+\begin{align*}
+  \bigl(\frac{-223}{3}\bigr) &= \bigl(\frac{-1}{3}\bigr) = -1 & \Rightarrow
+     3\text{~träge}\\
+  \bigl(\frac{-223}{5}\bigr) & = \bigl(\frac{2}{5}\bigr) = -1& \Rightarrow
+     5\text{~träge}\\
+  \bigl(\frac{-223}{7}\bigr)& = \bigl(\frac{-13}{7}\bigr) =
+     \bigl(\frac{1}{7}\bigr) = 1& \Rightarrow 7\text{zerlegt}
+\end{align*}
+
+$Cl_{K}$ erzeugt von $\ideal_{2}$ und $\ideal_{7}$. Beide keine Hauptideale:
+$\alpha=a+b\omega, b=1$
+\begin{gather*}
+  \begin{array}{c|l}
+    a& N(a+b\omega) = a^{2} + ab + 56b^{2}\\
+    1& 58 = 2\cdot29\\
+    2& 62 = 2\cdot31\\
+    3& 68 = 2\cdot 2\cdot17\\
+    4& 76 = 2\cdot2\cdot19\\
+    5& 86 = 2\cdot43\\
+    6& 98 = 2\cdot49\\
+    7& 112 = 2^{4}\cdot7\\
+    8& 128 = 2^{7}
+  \end{array}
+\end{gather*}
+$\ideal_{2}\ideal_{7}^{2} \sim 1$, $\ideal_{2}^{4}\ideal_{7}\sim 1$
+$\Rightarrow$ $\ideal_{2}$ erzeugt $Cl_{k}$, $\ideal_{2}^{7} \sim 2$
+$\Rightarrow$ $Cl_{K}$ zyklisch der Ordnung 7
+
+$L=\Q(\sqrt{2007}) = \Q(\sqrt{223})$, $d_{K} = 4\cdot223 = 892$,
+
+$1,\omega=\sqrt{223}$ Ganzheitsbasis
+
+\subsection{Kettenbruchzerlegung von \texorpdfstring{$\sqrt{223}$}{sqrt(223)}}
+
+\begin{align*}
+  \sqrt{223} &= 14+(\omega-14)\\
+  \frac{1}{\omega-14}& =\frac{\omega+14}{27} = 1+\frac{\omega-13}{27}\\
+  \frac{27}{\omega-13}& = \frac{27(\omega+13)}{58} = 13 + \frac{\omega-13}{2}\\
+  \frac{2}{\omega-13}& = \frac{2(\omega+13)}{13} = 1+ \frac{\omega-14}{27}\\
+  \frac{27}{\omega-14}& = \frac{27(\omega+14)}{27} = \omega+14 = 28 + (\omega-14)
+\end{align*}
 $\sqrt{223} = [14; \overline{1,13,1,28}]$
+
 \begin{gather*}
   \begin{array}{l|*{6}{c}}
     n& 0& 1& 2& 3& 4 & 5\\
@@ -5413,6 +5532,201 @@ Aut(C_{223}) = (\nicefrac{\Z}{223\Z})^{*}$ ist eine zyklische Gruppe der
 Ordnung 222, $222=2\cdot3\cdot37$. ($Aut$ ist Automorphismus)
 
 $\Rightarrow$ insgesamt noch zwei Isotypen nicht abelscher Gruppen.
+
+\textbf{Weiter im eigentlichen Vorlesungsstoff!}
+
+\begin{fakt}
+  \begin{align*}
+    G(\epsilon_{-4}) &= 2i\\
+    G(\epsilon_{8})& = \sqrt{8}\\
+    G(\epsilon_{-8})& = i\sqrt{8}
+  \end{align*}
+
+  \begin{proof}
+    \begin{align*}
+      &\begin{array}{c|*{4}{c}}
+        \epsilon_{8}& 1& -1& -1& 1\\
+        \epsilon_{-8}& 1& 1& -1& -1
+      \end{array}\\
+      G(\epsilon_{-4}) &= \epsilon_{-4}(1) \zeta_{4} + \epsilon_{-4}(3)
+         \zeta_{4}^{3} = i-i^{3} = 2i\\
+      G(\epsilon_{8}) &= \zeta_{8} - \zeta_{8}^{3} - \zeta_{8}^{5} +
+         \zeta_{8}^{7}\\
+      &= 2\cos\frac{2\pi}{8} - 2\cos\frac{6\pi}{8}
+         = 2\cos \frac{\pi}{4} - 2\cos\frac{3\pi}{4} = \sqrt{2}+\sqrt{2} =
+         2\sqrt{2}\\
+      G(\epsilon_{-8}) &= \zeta_{8} + \zeta_{8}^{3} - \zeta_{8}^{5} -
+         \zeta_{8}^{7}
+         = 2i\sin\frac{\pi}{4} - 2i\sin\frac{3\pi}{4} = 2i\sqrt{2}
+    \end{align*}
+  \end{proof}
+\end{fakt}
+
+\begin{fakt}
+  $G(a,\chi_{K}) = \chi_{K}(a) G(\chi_{K})$
+
+  \begin{proof}
+    \begin{gather*}
+      G(a,\chi_{K}) = \sum_{x\mod^{*}\abs{d_{K}}} \chi_{K}(x) \zeta_{p}^{ax}
+    \end{gather*}
+    Mit $x$ durchläuft auch $ax$ die primen Restklassen $\mod \abs{d_{K}}$,
+    falls nur $a$ prime Restklasse ist. $\Rightarrow$
+    \begin{gather*}
+      G(a,\chi_{K}) = \sum_{y \mod^{*}\abs{d_{K}}} \chi_{K}(a^{-1}y) \zeta_{p}^{y}
+         = \chi_{K}(a^{-1}) G(\chi_{K})
+    \end{gather*}
+    $\chi_{K}^{2}\equiv1$ $\Rightarrow$ $\chi_{K}(a)= \chi_{K}(a^{-1})$.
+
+    Übungsuafgabe: Ist $(a,d_{K})>1$, so ist $G(a,\chi_{K})=0$.
+  \end{proof}
+\end{fakt}
+
+\begin{fakt}
+  \begin{gather*}
+    G(\chi_{K}) =
+       \begin{cases}
+         \sqrt{\abs{d_{K}}}& d_{K}>0\\
+         i\sqrt{\abs{d_{K}}}& d_{K}<0
+       \end{cases}
+  \end{gather*}
+
+  \begin{proof}
+    \begin{faelle}
+     \item $d_{K}\equiv1\pmod{4}$
+      \begin{gather*}
+        d_{K} = (-1)^{\epsilon} p_{1}\dotsm p_{r}
+      \end{gather*}
+      $p_{j}>2$ und verschieden.
+
+      $\epsilon=0,1$, $\epsilon\equiv(\text{Anzahl der
+      $p_{i}\equiv3\pmod{4}$})\pmod{2}$
+
+      $\chi_{K} = \bigl(\frac{\cdot}{p_{1}}\bigr)\dotsm
+      \bigl(\frac{\cdot}{p_{r}}\bigr)$
+
+      \begin{gather*}
+        G(\chi_{K}) = G(\bigl(\frac{\cdot}{p_{1}}\bigr)) \dotsm
+           G(\bigl(\frac{\cdot}{p_{r}}\bigr)) \cdot \prod_{i\ne j}
+           \bigl(\frac{p_{i}}{p_{j}}\bigr)
+      \end{gather*}
+      Sei $\alpha=\text{Anzahl der $p_{j}\equiv3\pmod{4}$}$
+
+      \begin{gather*}
+        \bigl(\frac{p_{i}}{p_{j}}\bigr) \bigl(\frac{p_{j}}{p_{i}}\bigr) =
+           \begin{cases}
+             -1& p_{i}\equiv p_{j}\equiv3\pmod{4}\\
+             1& \text{sonst}
+           \end{cases}\\
+        G(\chi_{K}) = i^{\alpha} \sqrt{p_{1}\dotsm p_{r}}
+           (-1)^{\frac{\alpha(\alpha-1)}{2}} = i^{\alpha^{2}}
+           \sqrt{p_{1}\dotsm p_{r}}
+      \end{gather*}
+
+      Ist $d_{K}>0$, so ist $\epsilon=0$, also $\alpha$ gerade, $\alpha^{2}+G$
+      durch 4, $\Rightarrow$
+      \begin{gather*}
+        G(\chi_{K}) = \sqrt{p_{1}\dotsm p_{r}} = \sqrt{d_{K}}
+      \end{gather*}
+
+      Ist $d_{K}<0$, so ist $\epsilon=1$, $\alpha$ ungerade, $\alpha^{2}\equiv
+      1\pmod{4}$ $\Rightarrow$ $G(\chi_{K}) = i\sqrt{\abs{d_{K}}}
+      $
+     \item $d_{K}\equiv0\pmod{4}$ $\Rightarrow$ so ähnlich.
+    \end{faelle}
+  \end{proof}
+\end{fakt}
+
+\section{Die Klassenzahlformeln}
+
+Zur Erinnerung. Satz~10 \todo{link finden}:
+\begin{align*}
+  L(1,\chi_{K}) &= \frac{2\pi}{w\sqrt{\abs{d_{K}}}} h_{K}& d_{K}<0\\
+  L(1,\chi_{K}) &= \frac{2\log\epsilon_{K}}{\sqrt{\abs{d_{K}}}} h_{K}& d_{K}>0\\
+  L(1,\chi_{K}) = \frac{1}{m} \sum_{a=1}^{m-1} G(a,\chi_{K}) (-\log)
+     (2\sin\frac{\pi a}{m}) -i (\frac{\pi}{2}-\frac{\pi a}{m}) 
+\end{align*}
+$m=\abs{d_{K}}$ sowie
+\begin{gather*}
+  G(a,\chi_{K}) = \chi_{K}(a) G(\chi_{K}), G(\chi_{K}) =
+     \begin{cases}
+       \sqrt{\abs{d_{K}}}\\
+       i\sqrt{\abs{d_{K}}}
+     \end{cases}
+\end{gather*}
+
+Sei $d_{K}>0$
+\begin{gather*}
+  L(1,\chi_{K}) = \frac{1}{d_{K}} \sqrt{d_{K}} \sum_{(a,d_{K})=1} \chi_{K}(a)
+     (-\log2\pi\frac{a}{d_{K}})
+\end{gather*}
+wegen $L(1,\chi_{K})\in\R$
+
+$\Rightarrow$
+\begin{gather*}
+  h_{K} = -\frac{1}{2\log\epsilon_{K}} \sum_{(a,d_{K})=1} \chi_{K}(a)
+     \frac{2\pi a}{d_{K}}
+\end{gather*}
+Da $\sum_{a} \chi_{K}(a) =0$, kann man die 2 weglassen.
+
+$\chi_{K}(-a)=\chi_{K}(-1)\chi_{K}(a)$, $\chi_{K}(-1)=1$ für $K$
+reellquadratisch
+\begin{gather*}
+  \log(\sin\frac{\pi(d_{K}-a)}{d_{K}}) = \log(\sin\frac{\pi a}{d_{K}})
+\end{gather*}
+
+\begin{satz}[Klassenzahlformel für reellquadratische Zahlkörper]
+  \begin{gather*}
+    h_{K} = -\frac{1}{\log \epsilon_{K}} \sum_{0<a<\frac{d_{K}}{2}}
+       \chi_{K}(a) \log\sin\frac{\pi a}{d_{K}}
+  \end{gather*}
+\end{satz}
+
+\begin{folger}
+  Für $a,b\in(0,\frac{1}{2}d_{K})$ mit $\chi_{K}(a)=+1, \chi_{K}(b)=-1$ sei
+  \begin{gather*}
+    \eta= \frac{\prod_{b}\sin \frac{\pi b}{d_{K}}}{\prod_{a}\sin\frac{\pi
+       a}{d_{K}}}
+  \end{gather*}
+  Dann folgt $\epsilon_{K}^{h_{K}}=\eta = $ Einheit im $O_{K}$, $\eta>1$.
+\end{folger}
+
+Sei nun $d_{K}<0$
+\begin{gather*}
+  \frac{2\pi}{w\sqrt{\abs{d_{K}}}} h_{K} = \frac{\sqrt{d_{K}}}{\abs{d_{K}}}
+     \sum_{a\mod\abs{d_{K}}} \chi_{K}(a) \bigl(\frac{\pi}{2} - \frac{\pi
+     a}{\abs{d_{K}}}\bigr)\\
+  \Rightarrow h_{K} = -\frac{w}{2\abs{d_{K}}} \sum_{a\mod\abs{d_{K}}}
+     \chi_{K}(a)\cdot a
+\end{gather*}
+
+Sei $d_{K}\leftarrow4$ $\Rightarrow$
+\begin{gather*}
+  h_{K} = -\frac{1}{\abs{d_{K}}} \sum_{a\mod\abs{d_{K}}} \chi_{K}(a)\cdot a
+\end{gather*}
+
+\begin{satz}[Klassenzahlformel für imaginärquadratische Zahlkörper]
+  Sei $K$ imaginärquadratisch, $d_{K}< -4$
+  \begin{gather*}
+    h_{K} = \frac{1}{2-\chi_{K}(2)} \sum_{0<a<\frac{\abs{d_{K}}}{2}} \chi_{K}(a)
+  \end{gather*}
+\end{satz}
+
+\begin{bsp}
+  Sei $d_{K}=-43$, dann ist $\chi_{K} = \bigl(\frac{\cdot}{43}\bigr)$. Da
+  $-43\equiv5\pmod{8}$ folgt $\chi_{K}(2)=-1$. Also $h_{K} = \frac{1}{3}(R-N)$
+  wobei $R$ die Anzahl der Quadrate in $[1,21]$ und $N$ die Anzahl der
+  Nichtquadrate in $[1,21]$ ist.
+  \begin{gather*}
+    \begin{array}{c|*{21}{c}}
+      x& 1& 2& 3& 4& 5& 6& 7& 8& 9& 10& 11& 12& 13& 14& 15& 16& 17& 18& 19&
+      20& 21\\
+      \hline
+      (\frac{x}{43})& 1& -1& -1& 1& -1& 1& -1& -1& 1& 1& 1& -1& 1& 1& 1& 1& 1&
+      -1& -1& -1& 1
+    \end{array}
+  \end{gather*}
+  damit ergibt sich $R=12$ und $N=9$ also ist $h_{K} = \frac{12-9}{3} = 1$.
+\end{bsp}
 
 \clearpage
 \pdfbookmark[0]{Index}{index}
