--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -66,6 +66,7 @@
 \usepackage{nicefrac}
 \usepackage{gauss}
 \usepackage{fancyvrb}
+\usepackage{tabularx}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -3408,6 +3409,7 @@ Bei AES ist auch der Hintergrund bekannt, wärend bei DES dies nicht war.
 
 \section{Mathematischer Hintergrund: Einwegfunktion, diskreter Logarithmus,
   primitive Wurzeln}
+\label{sec:rsa-math}
 
 \subsection{Modulare Exponensation mit fester Basis und festem Modul}
 
@@ -3823,6 +3825,160 @@ Faktorisierung, El Gamal auf dem Logarithmus.
     \end{description}
   \end{proof}
 \end{fakt}
+
+% 17.1.
+
+\subsection{Berechnung der \texorpdfstring{$\phi$}{phi}-Funktion}
+
+Die Berechnung der $\phi$-Funktion (ohne Kenntnis der Primfaktoren) ist
+genauso schwer wie die \highl{Faktorisierung} einer Zahl, d.\,h. die
+Bestimmung in ihre Primfaktoren.
+
+Komplexitätstheoretisch: zwei Berechnungsprobleme:
+\begin{description}
+ \item[Faktorisierung] (engl. Factoring) gegeben ist eine natürliche Zahl~$n$,
+  bestimme die Primfaktoren von $n$
+ \item[Euler-Funktion] gegeben ist eine natürliche Zahl~$n$, bestimme $\phi(n)$
+\end{description}
+
+\begin{fakt}
+  \begin{enumerate}
+   \item Euler-Funktion $\leq_{m}^{p}$ Faktorisierung
+   \item Faktorisierung $\leq_{m}^{p}$ Euler-Funktion
+  \end{enumerate}
+
+  \begin{proof}
+    zeigen: Gegeben sei $n$ für ein $n$ in der Form $n=p\cdot q$, wobei $p$
+    und $q$ prim sind und $p\ne q$ und $\phi(n)$.
+
+    Dann lassen sich $p$ und $q$ einfach berechnen: Es gilt: $n=p\cdot q$ und
+    es gilt:
+    \begin{align*}
+      \phi(n) &= (p-1)\cdot(q-1)\\
+      &= pq - p-q +1\\
+      &= n - (p+q) +1
+    \end{align*}
+    Also kennen wir anhand der gegebenen Größen die Summe der beiden Zahlen:
+    \begin{gather*}
+      p+q = n-\phi(n) +1
+    \end{gather*}
+
+    Versuchen wir noch $p-q$ zu bekommen:
+    \begin{gather*}
+      (p-q)^{2} = p^{2} - 2pq + q^{2} = p^{2} + 2pq + q^{2} - 4pq = (p+q)^{2}
+         - 4n\\
+      p-q = \sqrt{(p+q)^{2}-4n}
+    \end{gather*}
+
+    Die Berechnung erfordert $O(1)$ viele Schritte. Also sind beide Probleme
+    gleich schwer.
+  \end{proof}
+\end{fakt}
+
+\section{Das RSA-Verfahren}
+
+1978: Ron Rivest, Adi Shamir, Leonard Adleman; Führer der Truppe war Rivest.
+wollten zeigen, das Deffie und Helman nicht recht hatten mit ihrem Ansatz,
+dass es Einwegfunktionen gibt.
+
+\begin{table}
+  \centering
+  \begin{tabularx}{.85\linewidth}{*{2}{|c|>{\raggedright\arraybackslash}X}|}
+    \hline
+    Schritt& Alice& Kanal& Bob\\
+    \hline
+    1.& & & "`Wähle"' zwei große Primzahlen $p$ und $q$, bestimme $n=p\cdot q$\\
+    2.& & & "`Wähle"' eine große Zahl $d$ mit $\ggT(d,\phi(n)) = 1$\\
+    3.& & & Berechne das eindeutig bestimmte Inverse $e$ in $\Z_{\phi(n)}^{*}$;
+       $d\cdot e\equiv1\pmod{\phi(n)}$\\
+    4.& & $\xleftarrow{n,e}$& Veröffentliche $n$ und $e$\\
+    5.& Chiffriere die Botschaft~$M\leq n-1$ durch $C=M^{e}\pmod{n}$& & \\
+    6.& Sende verschlüsselte Botschaft& $\xrightarrow{C}$& \\
+    7.& & & Dechiffriere $C^{d}\pmod{n} = M$\\
+    \hline
+  \end{tabularx}
+  \caption{Das RSA-Verfahren (Alice schickt eine verschlüsselte Nachricht an Bob.)}
+\end{table}
+
+öffentlich sind $n,e$ und $C$, geheim bleiben $p,q, \phi(n), d$ und $M$
+
+\begin{satz}
+  Der RSA-Algorithmus ist korrekt.
+
+  \begin{proof}
+    ist bereits im \autoref{sec:rsa-math}.
+
+    (zur Übung selber nachrechnen)
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item RSA ist etwa 100 mal langsamer als AES. Daher verwendet man
+    \highl{Hybridverfahren}: Schlüsseltausch (des Schlüssels für die
+    Blockverschlüsselung) gemäß RSA, Verschlüsselung mit AES
+
+   \item "`Wähle"' große Primzahlen: $p$ und $q$ sollten in der Größenordnung
+    von $10^{100}$ liegen, damit man $n$ nicht leicht faktorisieren kann. Es
+    gibt unterschiedliche, probabilistische Verfahren, um eine Zahl auf prim
+    zu testen; z.\,B. von Solovay und Strassen: ca.\,170 Zahlen testen oder
+    von Rabin und Miller: ca.\,100 Zahlen testen
+
+   \item "`Wähle"' große Zahl $d$, damit sie nicht durch probieren
+    gefunden werden kann.
+
+   \item $e$ ist mit dem erweiterten euklidischen Algorithmus in
+    Polynomialzeit berechenbar.
+
+   \item $C$ und $M$ sind ebenfalls in Polynomialzeit berechenbar.
+    (sqare-and-multiply-Algorithmus)
+
+   \item $p$ und $q$ mit $p\cdot q>10^{200}$ sollten um einige Dezimalstellen
+    differieren, damit man nicht durch $\sqrt{pq}$ diese schon fast erhält.
+
+   \item $p-1$ und $q-1$ sollten große Primfaktoren besitzen und $p-1$ und
+    $q-1$ sollten möglichst teilerfremd sein ($\ggT(p-1, q-1)$ möglichst klein).
+
+   \item Ein direkter Angriff würde bedeuten, da $C=M^{e}\pmod{n}$ ist, aus
+    $C$ die $e$.\,Wurzel modulo~$n$ zu berechen. Dogma: Dies ist ohne
+    Falltürinformation praktisch nicht möglich.
+
+   \item Nachrichten in Blöcke passender Länge zerlegen; passende Blocklänge
+    ist ??? \help{Hat jemand kappiert, wie man die Blocklänge wählt?}
+  \end{enumerate}
+\end{bemerk}
+
+\begin{bsp}
+  $p=47, q=59$. Dann ist $n=pq = 2773$, $\phi(n) = (p-1)(q-1) = 46\cdot58 =
+  2668$.
+
+  $d\in\Z_{\phi(n)}^{*}$, $d=157$.
+
+  Berechne $e$ mit erweiterten euklidischen Algorithmus: $e=17$
+
+  Als Blocklänge ergibt sich 2, da $(\abs{\mathrm{Buchstaben}}+
+  \abs{\mathrm{Satzzeichen}})^{2}\leq n-1$ ($26^{3}>n-1$).
+
+  Nachricht: "`\texttt{ITS ALL GREEK TO ME}"' wird codiert zu
+  \texttt{0920 1900 0112 1200 0718 0505 1100 2015 0013 0500} (Leerzeichen ist 00)
+
+  $e = 17 = 10001_{2}$. Der erste Block $M_{1}^{2} = 920$ wird verschlüsselt zu
+  \begin{gather*}
+    920^{17}\pmod{2773} = (((920^{2})^{2})^{2})^{2}\cdot920 \pmod{2773} = 948
+  \end{gather*}
+
+  Insgesamt ergibt sich als Geheimtext \texttt{0948 2342 1084 1444 2663 2390
+  0778 0774 0219 1655}.
+
+  Dechiffrierung: $948^{157}\pmod{2773}$; da $d=157= 10011101_{2}$ ergibt sich
+  \begin{gather*}
+    948^{157}\pmod{2773} = ((((((948^{2})^{2})^{2}\cdot948)^{2}\cdot948)^{2}
+       \cdot948)^{2})^{2}\cdot948\pmod{2773} = 920
+  \end{gather*}
+
+  Bemerkung: mach mach modulo nach jedem Quadrieren bzw. Multiplizieren, damit
+  die Operanten nicht zu groß werden.
+\end{bsp}
 
 \clearpage
 \appendix
